@@ -1,6 +1,11 @@
 2008-11-20  Michael Smith <msmith@songbirdnest.com>
 
 	* gst/playback/gstdecodebin2.c:
+	  Fix random fat-fingering making this not compile.
+
+2008-11-20  Michael Smith <msmith@songbirdnest.com>
+
+	* gst/playback/gstdecodebin2.c:
 	  If the top-level type of the stream is plain text, don't try to decode
 	  it, matching behaviour of decodebin.
 	* gst/playback/gstplaysink.c:
